Add content layout

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+    --dark-green-color: #596D48;
+    --background-color: #F9FAFB;
+}
+
+body {
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    background-color: var(--background-color);
+}
+
 .form-layout {
     display: flex;
 }
@@ -8,9 +19,47 @@
     overflow: hidden;
     height: 100vh;
     width: 40vw;
-    flex: auto;
+    flex: 0 0 auto;
 }
 
 .content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
+.content-container section {
+    padding: 0 3rem;
+}
+
+.label-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-line {
+    display: flex;
+    gap: 3rem;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.content-container .input-section {
+    background-color: white;
+    box-shadow: 0 4px 5px -4px black;
+    padding: 1rem 3rem;
+    margin: 3rem 0;
+}
+
+.input-section h1{
+    margin-top: 0;
+}
+
+a {
+    text-decoration: none;
+    color: var(--dark-green-color);
 }
