--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
     height: 100vh;
     width: 40vw;
     flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .content-container {
@@ -62,4 +65,28 @@ body {
 a {
     text-decoration: none;
     color: var(--dark-green-color);
+}
+
+.logo-container {
+    height: 8rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.logo-img {
+    max-height: 100%;
+    width: auto;
+    display: block;
+    object-fit: cover;
+}
+
+.logo {
+    color: white;
+    margin: 0;
+    font-size: 5rem;
+    font-family: monospace;
 }
